crates/shiplog-render-md/src/snapshots/shiplog_render_md__tests__snapshot_empty_packet.snap
---
source: crates/shiplog-render-md/src/lib.rs
expression: result
---
# Summary

**Window:** 2024

**Workstreams:** 0

**Events:** 0 PRs, 0 reviews, 0 manual

**Coverage:** Complete

**Sources:** 

## Workstreams

_No workstreams found_

## Receipts

_No workstreams, no receipts_

## Coverage and Limits

Included:
- No completed sources recorded
- Fetched events: not reported by query slices

Skipped:
- None recorded

Known gaps:
- None recorded

Details:
- **Date window:** 2024-01-01 to 2024-12-31
- **Mode:** test
- **Sources:** none recorded
- **Completeness:** Complete

## Appendix: All Receipts

## File Artifacts

- `ledger.events.jsonl` (canonical events)
- `coverage.manifest.json` (completeness + slicing)
- `workstreams.yaml` (editable clustering)
- `manual_events.yaml` (non-GitHub work)
